# summarizer

./: .env.skel  .envrc  .gitignore  .tool-versions  README.md  docker-compose.yml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ErrorToast.tsx  HealthStatus.tsx  InfoIcon.tsx  LoadingBar.tsx  ProcessingMetadata.tsx  ProfilingData.tsx  SummaryForm.tsx  SummaryResult.tsx  TabContent.tsx  TextStatistics.tsx  ThemeSwitch.tsx
frontend/src/hooks/: useFileUpload.ts  useHealthStatus.ts  useInterval.ts  useTheme.ts
infrastructure/: Pulumi.main.yaml  Pulumi.yaml  __main__.py  config.py  k9s  pyproject.toml
infrastructure/providers/: cloudflare.py  digitalocean.py  kubernetes.py
infrastructure/resources/: cluster.py  deployments.py  networking.py  registry.py
server/: .dockerignore  entrypoint.sh  environment.yml  pyproject.toml  python.Dockerfile
server/scripts/: wait_for_backend.sh
server/src/: conftest.py  main.py  pytest.ini  test_main.py
server/src/api/: models.py  routes.py
server/src/config/: dask_config.py
server/src/services/: base_processor.py  conftest.py  constants.py  dask_processor.py  dask_summarizer.py  file_processor.py  language.py  statistics.py  summarizer.py  test_dask_processor.py  test_dask_summarizer.py  test_file_processor.py  test_summarizer.py  text_processor.py  types.py  vectorizer.py
server/src/utils/: dask_client.py  logging_config.py  text_processing.py
