[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = ""
authors = ["Daniel Albarral Nunez <daniel@albarralnunez.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
memory-profiler = "^0.61.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
